# numeros

./: LICENSE  README.md  setup.cfg
src/numeros/: lectura.py  romanos.py
src/numeros_vdagoliath.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_3dig.py
