[metadata]
name = numeros-vdagoliath
version = 0.0.3
author = Victor Daniel Arteaga Goliath
author_email = vdag83@gmail.com
description = Tratamiento de números
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vdagoliath/numeros
project_urls =
    Bug Tracker = https://github.com/vdagoliath/numeros/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src